Some tweaks about retractation + added Klicky configuration.

--- a/printer-20220228_153617.cfg
+++ b/printer-20220228_153617.cfg
@@ -504,10 +504,10 @@ gcode:
     G28
     QUAD_GANTRY_LEVEL
     clean_nozzle                   ; Clean nozzle
-    G28
+#    G28
     SET_GCODE_OFFSET Z=0
     CALIBRATE_Z
-#    BED_MESH_CALIBRATE
+    BED_MESH_CALIBRATE
     ##	Uncomment for for your size printer:
     #--------------------------------------------------------------------
 
@@ -614,41 +614,3 @@ shaper_type_y: 3hump_ei
 #*#
 #*# [stepper_z]
 #*# position_endstop = 0.250
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  -0.105312, -0.027187, 0.001563, -0.028750, -0.091562
-#*# 	  -0.109375, -0.026250, -0.000312, -0.027187, -0.101562
-#*# 	  -0.100625, -0.026250, 0.000000, -0.005938, -0.085313
-#*# 	  -0.096875, -0.006875, 0.017812, -0.005938, -0.087500
-#*# 	  -0.081875, 0.002812, 0.025000, 0.003437, -0.075000
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 260.0
-#*# mesh_x_pps = 2
-#*# max_x = 260.0
-#*#
-#*# [bed_mesh pla]
-#*# version = 1
-#*# points =
-#*# 	  -0.105312, -0.027187, 0.001563, -0.028750, -0.091562
-#*# 	  -0.109375, -0.026250, -0.000312, -0.027187, -0.101562
-#*# 	  -0.100625, -0.026250, 0.000000, -0.005938, -0.085313
-#*# 	  -0.096875, -0.006875, 0.017812, -0.005938, -0.087500
-#*# 	  -0.081875, 0.002812, 0.025000, 0.003437, -0.075000
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 260.0
-#*# mesh_x_pps = 2
-#*# max_x = 260.0
