--- a/moonraker.conf
+++ b/moonraker.conf
@@ -46,6 +46,12 @@ primary_branch: main
 path: ~/moonraker-timelapse
 origin: https://github.com/mainsail-crew/moonraker-timelapse.git
 
+[update_manager client z_calibration]
+type: git_repo
+path: /home/pi/klipper_z_calibration
+origin: https://github.com/protoloft/klipper_z_calibration.git
+install_script: install.sh
+
 #[update_manager fluidd]
 #type: web
 #repo: fluidd-core/fluidd
