Fixed Klicky position. Improved fast infill.

--- a/printer.cfg
+++ b/printer.cfg
@@ -504,10 +504,10 @@ gcode:
     G28
     QUAD_GANTRY_LEVEL
     clean_nozzle                   ; Clean nozzle
-    G28
-    SET_GCODE_OFFSET Z=0
+    G28 Z
+    #SET_GCODE_OFFSET Z=0
     CALIBRATE_Z
-#    BED_MESH_CALIBRATE
+    BED_MESH_CALIBRATE
     ##	Uncomment for for your size printer:
     #--------------------------------------------------------------------
 
@@ -579,6 +579,9 @@ shaper_type_x: 2hump_ei
 shaper_freq_y: 63.8
 shaper_type_y: 3hump_ei
 
+[save_variables]
+filename: ~/klipper_config/saved_variables.cfg
+
 [include fast_infill.cfg]
 [include menu_fast_infill.cfg]
 [include nozzle_scrub.cfg]
@@ -618,30 +621,11 @@ shaper_type_y: 3hump_ei
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.105312, -0.027187, 0.001563, -0.028750, -0.091562
-#*# 	  -0.109375, -0.026250, -0.000312, -0.027187, -0.101562
-#*# 	  -0.100625, -0.026250, 0.000000, -0.005938, -0.085313
-#*# 	  -0.096875, -0.006875, 0.017812, -0.005938, -0.087500
-#*# 	  -0.081875, 0.002812, 0.025000, 0.003437, -0.075000
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 260.0
-#*# mesh_x_pps = 2
-#*# max_x = 260.0
-#*#
-#*# [bed_mesh pla]
-#*# version = 1
-#*# points =
-#*# 	  -0.105312, -0.027187, 0.001563, -0.028750, -0.091562
-#*# 	  -0.109375, -0.026250, -0.000312, -0.027187, -0.101562
-#*# 	  -0.100625, -0.026250, 0.000000, -0.005938, -0.085313
-#*# 	  -0.096875, -0.006875, 0.017812, -0.005938, -0.087500
-#*# 	  -0.081875, 0.002812, 0.025000, 0.003437, -0.075000
+#*# 	  -0.159062, -0.055937, -0.024062, -0.055000, -0.132812
+#*# 	  -0.144687, -0.017500, -0.012500, -0.033750, -0.135625
+#*# 	  -0.142187, -0.024062, 0.000000, -0.024688, -0.125625
+#*# 	  -0.165000, -0.045000, 0.007500, -0.024063, -0.137188
+#*# 	  -0.144063, -0.037188, -0.017188, -0.038750, -0.155313
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
