--- a/saved_variables.cfg
+++ b/saved_variables.cfg
@@ -1,3 +1,8 @@
 [Variables]
+bridge_infill_sqv = 20
 infill_sqv = 20
+internal_bridge_sqv = 20
+internal_perimeter_sqv = 15
+solid_infill_sqv = 20
+top_solid_infill_sqv = 15
 
