--- a/fast_infill.cfg
+++ b/fast_infill.cfg
@@ -1,10 +1,37 @@
-[save_variables]
-filename: ~/klipper_config/saved_variables.cfg
+[gcode_macro _USE_SOLID_INFILL_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set sqv = svv.solid_infill_sqv %}
+    SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={ sqv }
+
+[gcode_macro _USE_TOP_SOLID_INFILL_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set sqv = svv.top_solid_infill_sqv %}
+    SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={ sqv }
+
+[gcode_macro _USE_INTERNAL_PERIMETER_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set sqv = svv.internal_perimeter_sqv %}
+    SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={ sqv }
+
+[gcode_macro _USE_INTERNAL_BRIDGE_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set sqv = svv.internal_bridge_sqv %}
+    SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={ sqv }
 
 [gcode_macro _USE_INFILL_SQV]
 gcode:
     {% set svv = printer.save_variables.variables %}
-    {% set sqv = svv.infill_sqv | default(printer.configfile.settings.printer.square_corner_velocity, true) %}
+    {% set sqv = svv.infill_sqv %}
+    SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={ sqv }
+
+[gcode_macro _USE_BRIDGE_INFILL_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set sqv = svv.bridge_infill_sqv %}
     SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={ sqv }
 
 [gcode_macro _USE_NORMAL_SQV]
@@ -17,3 +44,46 @@ gcode:
     {% set svv = printer.save_variables.variables %}
     {% set val = params.SQV|default(svv.infill_sqv|default(printer.configfile.settings.printer.square_corner_velocity, true), true) | int %}
     SAVE_VARIABLE VARIABLE=infill_sqv VALUE={val}
+
+[gcode_macro SET_SOLID_INFILL_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set val = params.SQV|default(svv.solid_infill_sqv|default(printer.configfile.settings.printer.square_corner_velocity, true), true) | int %}
+    SAVE_VARIABLE VARIABLE=solid_infill_sqv VALUE={val}
+
+[gcode_macro SET_TOP_SOLID_INFILL_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set val = params.SQV|default(svv.top_solid_infill_sqv|default(printer.configfile.settings.printer.square_corner_velocity, true), true) | int %}
+    SAVE_VARIABLE VARIABLE=top_solid_infill_sqv VALUE={val}
+
+[gcode_macro SET_INTERNAL_PERIMETER_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set val = params.SQV|default(svv.internal_perimeter_sqv|default(printer.configfile.settings.printer.square_corner_velocity, true), true) | int %}
+    SAVE_VARIABLE VARIABLE=internal_perimeter_sqv VALUE={val}
+
+[gcode_macro SET_INTERNAL_BRIDGE_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set val = params.SQV|default(svv.internal_bridge_sqv|default(printer.configfile.settings.printer.square_corner_velocity, true), true) | int %}
+    SAVE_VARIABLE VARIABLE=internal_bridge_sqv VALUE={val}
+
+[gcode_macro SET_BRIDGE_INFILL_SQV]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set val = params.SQV|default(svv.bridge_infill_sqv|default(printer.configfile.settings.printer.square_corner_velocity, true), true) | int %}
+    SAVE_VARIABLE VARIABLE=bridge_infill_sqv VALUE={val}
+
+[gcode_macro Query_SQV_Values]
+gcode:
+    {% set sqv = printer.save_variables.variables %}
+    {% set default_sqv = printer.configfile.settings.printer.square_corner_velocity %}
+    {action_respond_info(
+        "Infill SQV values: {}\n
+        Solid Infill SQV values: {}\n
+        Top Solid Infill SQV values: {}\n
+        Internal Perimeter SQV values: {}\n
+        Internal Bridge SQV values: {}\n
+        Bridge Infill SQV values: {}\n
+        Default SQV values: {}\n".format(sqv.infill_sqv,sqv.solid_infill_sqv,sqv.top_solid_infill_sqv,sqv.internal_perimeter_sqv,sqv.internal_bridge_sqv,sqv.bridge_infill_sqv,default_sqv))}
