Added webcam using mainsail's crowsnest (not convinced).

--- a/klicky-macros.cfg
+++ b/klicky-macros.cfg
@@ -180,6 +180,10 @@ gcode:
 
         _entry_point function=Attach_Probe_intern
 
+        # if necessary do some actions before moving the toolhead to the docking position
+        {% if printer["gcode_macro _DeployDock"] is defined %}
+            _DeployDock
+        {% endif %}
 
         # Probe entry location
         G0 X{docklocation_x|int - attachmove_x|int - attachmove2_x|int} Y{docklocation_y|int - attachmove_y|int - attachmove2_y} F{travel_feedrate}
@@ -201,6 +205,11 @@ gcode:
         {% endif %}
         G0 X{docklocation_x|int - attachmove_x|int} Y{docklocation_y|int - attachmove_y|int} F{release_feedrate}
 
+        # if necessary do some actions after attaching the probe
+        {% if printer["gcode_macro _RetractDock"] is defined %}
+            _RetractDock
+        {% endif %}
+		
         # Go to Z safe distance
         {% if printer.toolhead.position.z < safe_z %}
           G0 Z{safe_z} F{z_drop_feedrate}
@@ -210,7 +219,7 @@ gcode:
 
         _CheckProbe action=attach
 
-	_exit_point function=Attach_Probe_intern move={goback}
+        _exit_point function=Attach_Probe_intern move={goback}
 
     {% elif probe_lock %}
         {% if verbose %}
@@ -231,6 +240,18 @@ gcode:
     {% endif %}
 
     _exit_point function=Attach_Probe
+
+####################
+# Deploy klicky dock
+[gcode_macro _DeployDock]
+description: Deploys the dock
+gcode:
+
+####################
+# Retracts klicky dock
+[gcode_macro _RetractDock]
+description: Retracts the dock
+gcode:
 
 ####################
 # Dock Probe Routine
@@ -289,6 +310,11 @@ gcode:
 
         _Umbilical_Path
 
+        # if necessary do some actions before moving the toolhead to the docking position
+        {% if printer["gcode_macro _DeployDock"] is defined %}
+            _DeployDock
+        {% endif %}
+
         # Probe entry location
         G0 X{docklocation_x|int - attachmove_x|int} Y{docklocation_y|int - attachmove_y|int} F{travel_feedrate}
         {% if docklocation_z != -128 %}
@@ -307,6 +333,11 @@ gcode:
         {% endif %}
         G0 X{docklocation_x|int + dockmove_x|int} Y{docklocation_y|int + dockmove_y|int} F{release_feedrate}
         G0 X{docklocation_x|int + dockmove_x|int - attachmove_x|int} Y{docklocation_y|int + dockmove_y|int - attachmove_y|int} F{release_feedrate}
+
+        # if necessary do some actions after docking the probe
+        {% if printer["gcode_macro _RetractDock"] is defined %}
+            _RetractDock
+        {% endif %}
 
         # Go to Z safe distance
         {% if printer.toolhead.position.z < safe_z %}
@@ -533,7 +564,11 @@ gcode:
         {% if verbose %}
             { action_respond_info("Homing X") }
         {% endif %}
-        G28 X0
+        {% if printer["gcode_macro _HOME_X"] is defined %}
+            _HOME_X
+        {% else %}
+            G28 X0
+        {% endif %}
     {% endif %}
 
     # Home y
@@ -541,7 +576,11 @@ gcode:
         {% if verbose %}
             { action_respond_info("Homing Y") }
         {% endif %}
-        G28 Y0
+        {% if printer["gcode_macro _HOME_Y"] is defined %}
+            _HOME_Y
+        {% else %}
+            G28 Y0
+        {% endif %}
     {% endif %}
     # Home z
     {% if home_z %}
