--- a/klicky-variables.cfg
+++ b/klicky-variables.cfg
@@ -31,7 +31,7 @@ variable_max_bed_x:            300    # maximum Bed size avoids doing a probe_ac
 variable_z_endstop_x:          205
 variable_z_endstop_y:          300
 
-#Check the documentation on klipper Dock/Undock configuration, these are dummy values
+#Check the printer specific documentation on klipper Dock/Undock configuration, these are dummy values
 #dock location 
 variable_docklocation_x:       157    # X Dock position
 variable_docklocation_y:       301    # Y Dock position
