--- a/printer-20220325_233500.cfg
+++ b/printer-20220325_233500.cfg
@@ -29,10 +29,10 @@ serial: /dev/ttyAMA0
 
 [printer]
 kinematics: corexy
-max_velocity: 500  
-max_accel: 4700			        #Max 4000
+max_velocity: 300  
+max_accel: 4000			        #Max 4000
 max_z_velocity: 25			#Max 15 for 12V TMC Drivers, can increase for 24V
-max_z_accel: 500
+max_z_accel: 350
 square_corner_velocity: 5.0
 
 #####################################################################
@@ -129,6 +129,7 @@ homing_retract_dist: 3
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z]
 uart_pin: PD10
+uart_address: 0
 interpolate: False
 run_current: 0.8
 sense_resistor: 0.110
@@ -500,8 +501,6 @@ gcode:
 
 [gcode_macro G32]
 gcode:
-    #SAVE_GCODE_STATE NAME=STATE_G32
-    G90
     G28
     QUAD_GANTRY_LEVEL
     clean_nozzle                   ; Clean nozzle
@@ -516,7 +515,6 @@ gcode:
     G0 X150 Y150 Z30 F3600
 
     #--------------------------------------------------------------------
-    #RESTORE_GCODE_STATE NAME=STATE_G32
    
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
@@ -527,7 +525,6 @@ gcode:
 #    M109 S{EXTRUDER|int}           ; M109 heat and wait for it to reach temp
     CASELIGHT_ON
     G32                            ; home all axes
-    G90                            ; absolute positioning
     G1 Z20 F3000                   ; move nozzle away from bed 
 
 [gcode_macro PRINT_END]
@@ -577,10 +574,10 @@ probe_points:
 #--------------------------------------------------------------------
 
 [input_shaper]
-#shaper_freq_x: 66.0
-#shaper_type_x: 2hump_ei
-#shaper_freq_y: 63.8
-#shaper_type_y: 3hump_ei
+shaper_freq_x: 66.0
+shaper_type_x: 2hump_ei
+shaper_freq_y: 63.8
+shaper_type_y: 3hump_ei
 
 [save_variables]
 filename: ~/klipper_config/saved_variables.cfg
@@ -624,11 +621,11 @@ filename: ~/klipper_config/saved_variables.cfg
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.159062, -0.055937, -0.024062, -0.055000, -0.132812
-#*# 	-0.144687, -0.017500, -0.012500, -0.033750, -0.135625
-#*# 	-0.142187, -0.024062, 0.000000, -0.024688, -0.125625
-#*# 	-0.165000, -0.045000, 0.007500, -0.024063, -0.137188
-#*# 	-0.144063, -0.037188, -0.017188, -0.038750, -0.155313
+#*# 	  -0.159062, -0.055937, -0.024062, -0.055000, -0.132812
+#*# 	  -0.144687, -0.017500, -0.012500, -0.033750, -0.135625
+#*# 	  -0.142187, -0.024062, 0.000000, -0.024688, -0.125625
+#*# 	  -0.165000, -0.045000, 0.007500, -0.024063, -0.137188
+#*# 	  -0.144063, -0.037188, -0.017188, -0.038750, -0.155313
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
@@ -639,9 +636,3 @@ filename: ~/klipper_config/saved_variables.cfg
 #*# max_y = 260.0
 #*# mesh_x_pps = 2
 #*# max_x = 260.0
-#*#
-#*# [input_shaper]
-#*# shaper_type_x = mzv
-#*# shaper_freq_x = 56.4
-#*# shaper_type_y = mzv
-#*# shaper_freq_y = 39.6
