Fixes for rpi webcam and updated z-cal config to reflect recent changes.

--- a/klicky-z-calibration.cfg
+++ b/klicky-z-calibration.cfg
@@ -5,26 +5,23 @@
 
 #   The X and Y coordinates (in mm) for clicking the nozzle on the
 #   Z endstop.
-probe_nozzle_x: 205
-probe_nozzle_y: 300
+nozzle_xy_position: 205,300
 #   The X and Y coordinates (in mm) for clicking the probe's switch body
 #   on the Z endstop.
-probe_switch_x: 200
-probe_switch_y: 281
+switch_xy_position: 200,281
 #   The X and Y coordinates (in mm) for probing on the print surface
 #   (e.g. the center point) These coordinates will be adapted by the
 #   probe's X and Y offsets. The default is the relative_reference_index
 #   of the configured bed_mesh. It will raise an error if there is no
 #   probe_bed site and no bed_mesh with a relative_reference_index
 #   configured.
-#probe_bed_x: YOUR VALUES HERE
-#probe_bed_y: YOUR VALUES HERE
+#bed_xy_position: YOUR VALUES HERE,YOUR VALUES HERE
 #   The trigger point offset of the used switch.
 #   This needs to be fined out manually. For more details go to 
 #   https://github.com/protoloft/klipper_z_calibration#switch-offset
 #   "So, with a smaller offset value, the nozzle is more away from the 
 #   bed! The value cannot be negative."
-switch_offset: 0.45
+switch_offset: 0.47
 #   The maximum allowed deviation of the calculated offset.
 #   If the offset exceeds this value, it will stop!
 #   The default is 1.0 mm.
