--- a/printer.cfg
+++ b/printer.cfg
@@ -642,6 +642,6 @@ filename: ~/klipper_config/saved_variables.cfg
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = mzv
-#*# shaper_freq_x = 56.4
-#*# shaper_type_y = mzv
-#*# shaper_freq_y = 39.6
+#*# shaper_freq_x = 59.2
+#*# shaper_type_y = 3hump_ei
+#*# shaper_freq_y = 71.0
