--- a/webcam.conf
+++ b/webcam.conf
@@ -13,4 +13,4 @@ port: 8080                              # Port
 device: /dev/video0                     # See Log for available ...
 resolution: 1296x972                    # widthxheight format
 max_fps: 15                             # If Hardware Supports this it will be forced, ohterwise ignored/coerced.
-custom_flags: --buffers=2 --slowdown   # You can run the Stream Services with custom flags.
+custom_flags:   # You can run the Stream Services with custom flags.
