--- a/klicky-variables.cfg
+++ b/klicky-variables.cfg
@@ -28,27 +28,34 @@ variable_max_bed_x:            300    # maximum Bed size avoids doing a probe_ac
 # if a separate Z endstop switch is in
 # use, specify the coordinates of the switch here (Voron).
 # Set to 0 to have the probe move to center of bed
-variable_z_endstop_x:          205
+variable_z_endstop_x:          207
 variable_z_endstop_y:          300
 
 #Check the printer specific documentation on klipper Dock/Undock configuration, these are dummy values
 #dock location 
-variable_docklocation_x:       157    # X Dock position
+variable_docklocation_x:       159    # X Dock position
 variable_docklocation_y:       301    # Y Dock position
 variable_docklocation_z:      -128    # Z dock position (-128 for a gantry/frame mount)
 
-#Check the documentation on klicky klipper configuration, these are dummy values
-#Dock move 
-Variable_dockmove_x:            40    # Final toolhead movement to release
-Variable_dockmove_y:             0    # the probe on the dock
-Variable_dockmove_z:             0    # (can be negative)
-#Attach move 
-Variable_attachmove_x:           0    # Final toolhead movement to Dock
-Variable_attachmove_y:          30    # the probe on the dock
-Variable_attachmove_z:           0    # (can be negative)
+#The following variables are used if the dock is deployed and retracted via a servo motor
+variable_enable_dock_servo:  False    # Set to true if your klicky dock is servo-controlled
+variable_servo_name:        'NAME'    # The name of the dock servo defined in printer.cfg under [servo]
+variable_servo_deploy:          10    # This EXAMPLE is the value used to deploy the servo fully
+variable_servo_retract:         11    # This EXAMPLE is the value used to retract the servo fully (initial_angle in [servo] config)
+variable_servo_delay:         1000    # This is a delay to wait the servo to reach the requested position, be carefull with high values
+#Dock move, final toolhead movement to release the probe on the dock
+#it's a relative move
+Variable_dockmove_x:            40
+Variable_dockmove_y:             0
+Variable_dockmove_z:             0
+#Attach move. final toolhead movement to attach the probe on the mount
+#it's a relative move
+Variable_attachmove_x:           0
+Variable_attachmove_y:          30
+Variable_attachmove_z:           0
 
 #Umbilical to help untangle the umbilical in difficult situations
-variable_umbilical:          False    # should we untabgle the umbilical
+variable_umbilical:          False    # should we untangle the umbilical
 variable_umbilical_x:           15    # X umbilical position
 variable_umbilical_y:           15    # Y umbilical position
 
@@ -59,6 +66,12 @@ variable_parkposition_y:       125
 variable_parkposition_z:        30
 
 variable_version:                1    # Helps users to update the necessary variables, do not update if the variables above are not updated
+
+#Below this remark, you normally do not need to configure
+#Attach move2
+Variable_attachmove2_x:          0    # intermediate toolhead movement to attach
+Variable_attachmove2_y:          0    # the probe on the dock
+Variable_attachmove2_z:          0    # (can be negative)
 
 # Do not modify below
 gcode:
