--- a/printer.cfg
+++ b/printer.cfg
@@ -115,7 +115,7 @@ endstop_pin: ^PA0
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##	Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-#position_endstop: 0
+position_endstop: 0.250
 ##--------------------------------------------------------------------
 
 position_max: 290
@@ -359,12 +359,11 @@ kick_start_time: 0.5
 ##	if your fan is not able to slow down effectively
 off_below: 0.10
 
-[heater_fan controller_fan]
+[controller_fan controller_fan]
 ##	Controller fan - FAN2 Connector
 pin: PB2
 kick_start_time: 0.5
 heater: heater_bed
-heater_temp: 45.0
 
 [heater_fan exhaust_fan]
 ##  Exhaust fan - In E2 OUT Positon
@@ -506,6 +505,7 @@ gcode:
     QUAD_GANTRY_LEVEL
     clean_nozzle                   ; Clean nozzle
     G28 Z
+    clean_nozzle                   ; Clean nozzle
     #SET_GCODE_OFFSET Z=0
     CALIBRATE_Z
     BED_MESH_CALIBRATE
@@ -608,40 +608,18 @@ filename: ~/klipper_config/saved_variables.cfg
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 29.597
-#*# pid_ki = 1.916
-#*# pid_kd = 114.317
+#*# pid_kp = 28.327
+#*# pid_ki = 1.782
+#*# pid_kd = 112.599
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 41.754
-#*# pid_ki = 1.920
-#*# pid_kd = 227.039
-#*#
-#*# [stepper_z]
-#*# position_endstop = 0.250
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	-0.159062, -0.055937, -0.024062, -0.055000, -0.132812
-#*# 	-0.144687, -0.017500, -0.012500, -0.033750, -0.135625
-#*# 	-0.142187, -0.024062, 0.000000, -0.024688, -0.125625
-#*# 	-0.165000, -0.045000, 0.007500, -0.024063, -0.137188
-#*# 	-0.144063, -0.037188, -0.017188, -0.038750, -0.155313
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 260.0
-#*# mesh_x_pps = 2
-#*# max_x = 260.0
+#*# pid_kp = 40.931
+#*# pid_ki = 1.654
+#*# pid_kd = 253.260
 #*#
 #*# [input_shaper]
-#*# shaper_type_x = mzv
-#*# shaper_freq_x = 59.2
+#*# shaper_type_x = 3hump_ei
+#*# shaper_freq_x = 104.6
 #*# shaper_type_y = 3hump_ei
-#*# shaper_freq_y = 71.0
+#*# shaper_freq_y = 75.8
