--- a/klicky-macros.cfg
+++ b/klicky-macros.cfg
@@ -4,7 +4,9 @@
 # modified for better use on K-series printers by RyanG and Trails", kudos to them.
 # That macro as since evolved into a klipper plugin that currently is pending inclusion in klipper, 
 # more information here, https://github.com/Annex-Engineering/Quickdraw_Probe/tree/main/Klipper_Macros
-# User richardjm revised the macro variables and added some functions, thanks a lot
+# User richardjm revised the macro variables and added some functions
+# User sporkus added led status notifications
+# Thanks to all who helped,
 # by standing on the shoulders of giants, lets see if we can see further
 #
 # the current home for this version is https://github.com/jlas1/Klicky-Probe 
@@ -92,6 +94,57 @@ description: Locks Klicky Probe state
 gcode:
     SET_GCODE_VARIABLE MACRO=_Probe_Variables VARIABLE=probe_lock VALUE={ True }
 
+###################
+# Klicky Dock Servo Deploy
+
+[gcode_macro _DeployKlickyDock]
+description: Deploys Klicky servo-controlled dock
+gcode:
+    {% set enable_dock_servo = printer["gcode_macro _User_Variables"].enable_dock_servo|default(False) %}
+    {% set servo_delay = printer["gcode_macro _User_Variables"].servo_delay|default(1000) %}
+    {% set servo_name = printer["gcode_macro _User_Variables"].servo_name %}
+    {% set servo_deploy = printer["gcode_macro _User_Variables"].servo_deploy|default(360) %}
+
+    #wait for all the moves to complete
+    M400
+    {% if enable_dock_servo != False %}
+        {% if servo_deploy == 360 %}
+            { action_raise_error("Klicky: servo active on klicky-variables, but no servo deploy angle specified") }
+        {% endif %}
+        SET_SERVO SERVO={servo_name|string} ANGLE={servo_deploy|int}
+        M400
+        G4 P{servo_delay|int}
+        SET_SERVO SERVO={servo_name|string} WIDTH=0
+    {% elif printer["gcode_macro _DeployDock"] is defined %}
+        _DeployDock
+    {% endif %}
+
+####################
+# Dock Servo Retract
+
+[gcode_macro _RetractKlickyDock]
+description: Retracts Klicky servo-controlled dock
+gcode:
+    {% set enable_dock_servo = printer["gcode_macro _User_Variables"].enable_dock_servo|default(False) %}
+    {% set servo_delay = printer["gcode_macro _User_Variables"].servo_delay|default(1000) %}
+    {% set servo_name = printer["gcode_macro _User_Variables"].servo_name %}
+    {% set servo_retract = printer["gcode_macro _User_Variables"].servo_retract|default(360) %}
+	
+    #wait for all the moves to complete
+    M400
+    {% if enable_dock_servo != False %}
+        {% if servo_retract == 360 %}
+            { action_raise_error("Klicky: servo active on klicky-variables, but no servo retract angle specified") }
+        {% endif %}
+        SET_SERVO SERVO={servo_name|string} ANGLE={servo_retract|int} WIDTH=0
+        M400
+        G4 P{servo_delay|int}
+        SET_SERVO SERVO={servo_name|string} WIDTH=0
+    {% elif printer["gcode_macro _DeployDock"] is defined %}
+        _RetractDock 
+    {% endif %}
+
+
 ######################
 # Attach Probe Routine
 [gcode_macro Attach_Probe]
@@ -117,8 +170,8 @@ gcode:
     {% set attachmove2_y = printer["gcode_macro _User_Variables"].attachmove2_y|default(0) %}
     {% set attachmove2_z = printer["gcode_macro _User_Variables"].attachmove2_z|default(0) %}
     # Safe Z for travel
-	{% set safe_z = printer["gcode_macro _User_Variables"].safe_z %}
-	{% set enable_z_hop = printer["gcode_macro _User_Variables"].enable_z_hop %}
+    {% set safe_z = printer["gcode_macro _User_Variables"].safe_z %}
+    {% set enable_z_hop = printer["gcode_macro _User_Variables"].enable_z_hop %}
     # Set feedrates
     {% set travel_feedrate = printer["gcode_macro _User_Variables"].travel_speed * 60 %}
     {% set dock_feedrate = printer["gcode_macro _User_Variables"].dock_speed * 60 %}
@@ -126,15 +179,6 @@ gcode:
     {% set z_drop_feedrate = printer["gcode_macro _User_Variables"].z_drop_speed * 60 %}
 
     _entry_point function=Attach_Probe
-
-    # If there is no undock movement, fail
-    {% if dockmove_x == dockmove_y == dockmove_z == 0 %}
-        { action_raise_error("No dockmove location!! To restore old behavior place 40 in dockmove_x") }
-    {% endif %}
-    # If there is no Attach movement, fail
-    {% if attachmove_x == attachmove_y == attachmove_z == 0 %}
-        { action_raise_error("No attachmove location!!  To restore old behavior place dockarmslenght value in dockmove_x") }
-    {% endif %}
 
     # If x and y are not homed
     {% if not 'xy' in printer.toolhead.homed_axes %}
@@ -145,6 +189,7 @@ gcode:
         {% if verbose %}
             { action_respond_info("Attaching Probe") }
         {% endif %}
+        _KLICKY_STATUS_BUSY
 
         {% if not 'z' in printer.toolhead.homed_axes %}
             {% if verbose %}
@@ -180,23 +225,22 @@ gcode:
 
         _entry_point function=Attach_Probe_intern
 
-        # if necessary do some actions before moving the toolhead to the docking position
-        {% if printer["gcode_macro _DeployDock"] is defined %}
-            _DeployDock
-        {% endif %}
-
         # Probe entry location
         G0 X{docklocation_x|int - attachmove_x|int - attachmove2_x|int} Y{docklocation_y|int - attachmove_y|int - attachmove2_y} F{travel_feedrate}
         {% if docklocation_z != -128 %}
             G0 Z{docklocation_z|int - attachmove_z|int - attachmove2_z|int} F{dock_feedrate}
-			G0 Z{docklocation_z|int - attachmove_z|int} F{dock_feedrate}
+            G0 Z{docklocation_z|int - attachmove_z|int} F{dock_feedrate}
         {% endif %}
+
+        # if necessary do some actions before moving the toolhead to dock
+        _DeployKlickyDock
+
 
         # Drop Probe to Probe location
         {% if docklocation_z != -128 %}
             G0 Z{docklocation_z} F{dock_feedrate}
         {% endif %}
-		G0 X{docklocation_x|int - attachmove2_x|int} Y{docklocation_y|int - attachmove2_y} F{travel_feedrate}
+        G0 X{docklocation_x|int - attachmove2_x|int} Y{docklocation_y|int - attachmove2_y} F{dock_feedrate}
         G0 X{docklocation_x} Y{docklocation_y} F{dock_feedrate}
 
         # Probe Attach
@@ -206,10 +250,8 @@ gcode:
         G0 X{docklocation_x|int - attachmove_x|int} Y{docklocation_y|int - attachmove_y|int} F{release_feedrate}
 
         # if necessary do some actions after attaching the probe
-        {% if printer["gcode_macro _RetractDock"] is defined %}
-            _RetractDock
-        {% endif %}
-		
+        _RetractKlickyDock
+        
         # Go to Z safe distance
         {% if printer.toolhead.position.z < safe_z %}
           G0 Z{safe_z} F{z_drop_feedrate}
@@ -220,6 +262,7 @@ gcode:
         _CheckProbe action=attach
 
         _exit_point function=Attach_Probe_intern move={goback}
+        _KLICKY_STATUS_READY
 
     {% elif probe_lock %}
         {% if verbose %}
@@ -241,24 +284,13 @@ gcode:
 
     _exit_point function=Attach_Probe
 
-####################
-# Deploy klicky dock
-[gcode_macro _DeployDock]
-description: Deploys the dock
-gcode:
-
-####################
-# Retracts klicky dock
-[gcode_macro _RetractDock]
-description: Retracts the dock
-gcode:
 
 ####################
 # Dock Probe Routine
 [gcode_macro Dock_Probe]
 description: Docks Klicky Probe
 gcode:
-	# See if the position should be restored after the dock
+    # See if the position should be restored after the dock
     {% set goback  = params.back|default(0) %}
     # Get probe attach status
     {% set probe_attached = printer["gcode_macro _Probe_Variables"].probe_attached %}
@@ -282,15 +314,6 @@ gcode:
     {% set release_feedrate = printer["gcode_macro _User_Variables"].release_speed * 60 %}
     {% set z_drop_feedrate = printer["gcode_macro _User_Variables"].z_drop_speed * 60 %}
 
-    # If there is no undock movement, fail
-    {% if dockmove_x == dockmove_y == dockmove_z == 0 %}
-        { action_raise_error("No dockmove location!! To restore old behavior place 40 in dockmove_x") }
-    {% endif %}
-    # If there is no Attach movement, fail
-    {% if attachmove_x == attachmove_y == attachmove_z == 0 %}
-        { action_raise_error("No attachmove location!!  To restore old behavior place dockarmslenght value in dockmove_x") }
-    {% endif %}
-
     # If axis aren't homed, fail
     {% if not 'xyz' in printer.toolhead.homed_axes %}
         { action_raise_error("Must Home X, Y and Z Axis First!") }
@@ -303,6 +326,7 @@ gcode:
         {% if verbose %}
             { action_respond_info("Docking Probe") }
         {% endif %}
+        _KLICKY_STATUS_BUSY
 
         {% if printer.toolhead.position.z < safe_z %}
             G0 Z{safe_z} F{z_drop_feedrate}
@@ -310,16 +334,14 @@ gcode:
 
         _Umbilical_Path
 
-        # if necessary do some actions before moving the toolhead to the docking position
-        {% if printer["gcode_macro _DeployDock"] is defined %}
-            _DeployDock
-        {% endif %}
-
         # Probe entry location
         G0 X{docklocation_x|int - attachmove_x|int} Y{docklocation_y|int - attachmove_y|int} F{travel_feedrate}
         {% if docklocation_z != -128 %}
             G0 Z{docklocation_z|int - attachmove_z|int} F{dock_feedrate}
         {% endif %}
+
+        # if necessary do some actions before moving the toolhead to dock
+        _DeployKlickyDock
 
         # Drop Probe to Probe location
         G0 X{docklocation_x} Y{docklocation_y} F{dock_feedrate}
@@ -334,10 +356,8 @@ gcode:
         G0 X{docklocation_x|int + dockmove_x|int} Y{docklocation_y|int + dockmove_y|int} F{release_feedrate}
         G0 X{docklocation_x|int + dockmove_x|int - attachmove_x|int} Y{docklocation_y|int + dockmove_y|int - attachmove_y|int} F{release_feedrate}
 
-        # if necessary do some actions after docking the probe
-        {% if printer["gcode_macro _RetractDock"] is defined %}
-            _RetractDock
-        {% endif %}
+        # if necessary do some actions after attaching the probe
+        _RetractKlickyDock
 
         # Go to Z safe distance
         {% if printer.toolhead.position.z < safe_z %}
@@ -348,6 +368,7 @@ gcode:
 
         G4 P1000
         _CheckProbe action=dock
+        _KLICKY_STATUS_READY
 
     {% elif probe_lock %}
         {% if verbose %}
@@ -398,6 +419,7 @@ gcode:
     _CheckProbe action=query
     G90
     Attach_Probe back=1
+    _KLICKY_STATUS_CALIBRATING_Z
 
     _PROBE_CALIBRATE {% for p in params
             %}{'%s=%s ' % (p, params[p])}{%
@@ -406,6 +428,7 @@ gcode:
     M118 moving the toolhead 20 mm from the bed
     TESTZ Z=20
     M118 remove manually the probe and continue calibration
+    _KLICKY_STATUS_READY
 
 ################
 # Probe Accuracy
@@ -442,7 +465,7 @@ gcode:
             %}{'%s=%s ' % (p, params[p])}{%
            endfor %}
 
-    Dock_Probe back=1										   
+    Dock_Probe back=1                                          
 
     _exit_point function=PROBE_ACCURACY move=1
 
@@ -520,6 +543,7 @@ gcode:
     {% endif %}
 
     _entry_point function=homing_override
+    _KLICKY_STATUS_HOMING
 
     # if Z is not homed, do not move the bed if it goes down
     {% if 'z' not in printer.toolhead.homed_axes %}
@@ -553,7 +577,11 @@ gcode:
             {% if verbose %}
                 { action_respond_info("Homing Y") }
             {% endif %}
-            G28 Y0
+            {% if printer["gcode_macro _HOME_Y"] is defined %}
+                _HOME_Y
+            {% else %}
+                G28 Y0
+            {% endif %}
         {% endif %}
         {% set home_y = False %}
     {% endif %}
@@ -612,6 +640,7 @@ gcode:
     _Park_Toolhead
 
     _exit_point function=homing_override
+    _KLICKY_STATUS_READY
 
 # Umbilical path setup
 [gcode_macro _Umbilical_Path]
@@ -722,3 +751,51 @@ gcode:
     {% endif %}
     _exit_point function=Park_Toolhead
 
+
+
+#################
+# Status LEDs 
+# This enables stealthburner-led status macros to be used in klicky macros if they exist. 
+# https://github.com/VoronDesign/Voron-Afterburner/blob/sb-beta/Klipper_Macros/stealthburner_leds.cfg
+[gcode_macro _klicky_status_ready]
+gcode:
+    {% if printer['gcode_macro status_ready'] is defined %}
+        STATUS_READY
+    {% endif %}
+
+[gcode_macro _klicky_status_busy]
+gcode:
+    {% if printer['gcode_macro status_busy'] is defined %}
+        STATUS_BUSY
+    {% endif %}
+
+[gcode_macro _klicky_status_leveling]
+gcode:
+    {% if printer['gcode_macro status_leveling'] is defined %}
+        STATUS_LEVELING
+    {% endif %}
+
+[gcode_macro _klicky_status_homing]
+gcode:
+    {% if printer['gcode_macro status_homing'] is defined %}
+        STATUS_HOMING
+    {% endif %}
+
+[gcode_macro _klicky_status_cleaning]
+gcode:
+    {% if printer['gcode_macro status_cleaning'] is defined %}
+        STATUS_CLEANING
+    {% endif %}
+
+[gcode_macro _klicky_status_meshing]
+gcode:
+    {% if printer['gcode_macro status_meshing'] is defined %}
+        STATUS_MESHING
+    {% endif %}
+
+[gcode_macro _klicky_status_calibrating_z]
+gcode:
+    {% if printer['gcode_macro status_calibrating_z'] is defined %}
+        STATUS_CALIBRATING_Z
+    {% endif %}
+#################
