Updated crowsnest to v3.

--- a/printer.cfg
+++ b/printer.cfg
@@ -521,10 +521,12 @@ gcode:
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
+    {% set BED = params.BED|default(60)|float %}
+    {% set EXTRUDER = params.EXTRUDER|default(190)|float %}
     M117 Warmup
     CASELIGHT_HEATING
-#    M190 S{BED}                    ; set bed temp and wait for it reach temp
-#    M109 S{EXTRUDER|int}           ; M109 heat and wait for it to reach temp
+    M190 S{BED}                    ; set bed temp and wait for it reach temp
+    M109 S{EXTRUDER|int}           ; M109 heat and wait for it to reach temp
     CASELIGHT_ON
     G32                            ; home all axes
     G90                            ; absolute positioning
@@ -584,6 +586,8 @@ probe_points:
 
 [save_variables]
 filename: ~/klipper_config/saved_variables.cfg
+
+[exclude_object]
 
 [include fast_infill.cfg]
 [include menu_fast_infill.cfg]
