--- a/webcam.conf
+++ b/webcam.conf
@@ -3,8 +3,8 @@
 ### See docs.mainsail.xyz/whatever for Details to configure to your needs.
 
 
-[webcamd]
-log_path: ~/klipper_logs/webcamd.log    # Default logfile in ~/klipper_logs/webcamd.log
+[crowsnest]
+log_path: ~/klipper_logs/crowsnest.log    # Default logfile in ~/klipper_logs/webcamd.log
 log_level: quiet                        # Valid Options are quiet/verbose/debug
 
 [cam 1]
