--- a/klicky-variables.cfg
+++ b/klicky-variables.cfg
@@ -12,6 +12,7 @@
 
 [gcode_macro _User_Variables]
 variable_verbose:             True    # Enable verbose output
+variable_debug:              False    # Enable Debug output
 variable_travel_speed:         200    # how fast all other travel moves will be performed when running these macros
 variable_move_accel:          1000    # how fast should the toolhead accelerate when moving
 variable_dock_speed:            50    # how fast should the toolhead move when docking the probe for the final movement
@@ -34,7 +35,7 @@ variable_z_endstop_y:          300
 #Check the printer specific documentation on klipper Dock/Undock configuration, these are dummy values
 #dock location 
 variable_docklocation_x:       159    # X Dock position
-variable_docklocation_y:       301    # Y Dock position
+variable_docklocation_y:       296    # Y Dock position
 variable_docklocation_z:      -128    # Z dock position (-128 for a gantry/frame mount)
 
 #The following variables are used if the dock is deployed and retracted via a servo motor
@@ -72,6 +73,13 @@ variable_version:                1    # Helps users to update the necessary vari
 Variable_attachmove2_x:          0    # intermediate toolhead movement to attach
 Variable_attachmove2_y:          0    # the probe on the dock
 Variable_attachmove2_z:          0    # (can be negative)
+
+variable_home_backoff:          10    # how many mm to move away from the endstop after homing
+
+variable_override_homing:        ''   # configures what axis to home first
+                                      #  '' = default klicky behavior (tries to avoid the hitting the dock
+                                      # 'X' = forces X to home first 
+                                      # 'Y' = forces Y to home first  
 
 # Do not modify below
 gcode:
