--- a/moonraker.conf
+++ b/moonraker.conf
@@ -25,6 +25,7 @@ cors_domains:
 [file_manager]
 config_path: /home/pi/klipper_config
 log_path: /home/pi/klipper_logs
+enable_object_processing: True
 
 [octoprint_compat]
 
@@ -52,7 +53,7 @@ path: ~/klipper_z_calibration
 origin: https://github.com/protoloft/klipper_z_calibration.git
 install_script: install.sh
 
-[update_manager webcamd]
+[update_manager crowsnest]
 type: git_repo
 path: ~/crowsnest
 origin: https://github.com/mainsail-crew/crowsnest.git
