Ajout du Galileo.

--- a/klicky-macros.cfg
+++ b/klicky-macros.cfg
@@ -288,9 +288,9 @@ gcode:
         # if necessary do some actions after attaching the probe
         _RetractKlickyDock
         
-        # Go to Z safe distance
-        {% if printer.toolhead.position.z < safe_z %}
-          _KlickyDebug msg="Attach_Probe moving to a safe Z position: G0 Z{safe_z} F{z_drop_feedrate}"
+        ## Go to Z safe distance
+        {% if ((printer.toolhead.position.z < safe_z) or (docklocation_z != -128 and docklocation_z < safe_z ))%}
+          _KlickyDebug msg="Attach_Probe moving to a safe Z position: G0 Z{safe_z} F{z_drop_feedrate} from {printer.toolhead.position.z}"
           G0 Z{safe_z} F{z_drop_feedrate}
         {% endif %}
 
@@ -410,10 +410,10 @@ gcode:
         _KlickyDebug msg="Dock_Probe moving away from the dock to G0 X{docklocation_x|int + dockmove_x|int - attachmove_x|int} Y{docklocation_y|int + dockmove_y|int - attachmove_y|int} F{release_feedrate}"
         G0 X{docklocation_x|int + dockmove_x|int - attachmove_x|int} Y{docklocation_y|int + dockmove_y|int - attachmove_y|int} F{release_feedrate}
 
-        # Go to Z safe distance
-        {% if printer.toolhead.position.z < safe_z %}
-            _KlickyDebug msg="Dock_Probe toolhead too low, raising it to {safe_z}mm"
-            G0 Z{safe_z} F{z_drop_feedrate}
+        ## Go to Z safe distance
+        {% if ((printer.toolhead.position.z < safe_z) or (docklocation_z != -128 and docklocation_z < safe_z ))%}
+          _KlickyDebug msg="Dock_Probe moving to a safe Z position: G0 Z{safe_z} F{z_drop_feedrate} from {printer.toolhead.position.z}"
+          G0 Z{safe_z} F{z_drop_feedrate}
         {% endif %}
 
         _Park_Toolhead
@@ -545,12 +545,15 @@ gcode:
     # Safe Z for travel
     {% set safe_z = printer["gcode_macro _User_Variables"].safe_z %}
     {% set enable_z_hop = printer["gcode_macro _User_Variables"].enable_z_hop %}
+    {% set kinematic_z = 0 %}
+    {% set dock_on_zhome = printer["gcode_macro _User_Variables"].dock_on_zhome|default(True) %}
     {% set attachmove_x = printer["gcode_macro _User_Variables"].attachmove_x|default(0) %}
     {% set attachmove_y = printer["gcode_macro _User_Variables"].attachmove_y|default(0) %}
     {% set attachmove_z = printer["gcode_macro _User_Variables"].attachmove_z|default(0) %}
     {% set z_drop_feedrate = printer["gcode_macro _User_Variables"].z_drop_speed * 60 %}
     {% set travel_feedrate = printer["gcode_macro _User_Variables"].travel_speed * 60 %}
-    {% set home_backoff = printer["gcode_macro _User_Variables"].home_backoff|default(0) %}
+    {% set home_backoff_x = printer["gcode_macro _User_Variables"].home_backoff_x|default(0) %}
+    {% set home_backoff_y = printer["gcode_macro _User_Variables"].home_backoff_y|default(0) %}
     {% set override_homing = printer["gcode_macro _User_Variables"].override_homing|default('') %}
 
     #checks if the variable definitions are up to date
@@ -611,6 +614,8 @@ gcode:
     {% if 'z' not in printer.toolhead.homed_axes %}
          {% if not enable_z_hop %} # Disables safe_z
             _KlickyDebug msg="homing_override z_hop disabled"
+            #preserve safe_z to use as the SET KINEMATIC Z position, so that the toolhead does not move to pick up the probe
+            {% set kinematic_z = safe_z %}
             {% set safe_z = 0 %}
         {% endif %}
     {% endif %}
@@ -618,7 +623,7 @@ gcode:
     {% if home_z %}
         {% if 'z' in printer.toolhead.homed_axes %}
             {% if printer.toolhead.position.z < safe_z %}
-                _KlickyDebug msg="homing_override toolhead too low, raising it to {safe_z}mm"
+                _KlickyDebug msg="homing_override toolhead too low, with homed axes, raising it to {safe_z}mm"
                 {% if verbose %}
                     { action_respond_info("moving to a safe Z distance") }
                 {% endif %}
@@ -628,10 +633,15 @@ gcode:
             {% if verbose %}
                 { action_respond_info("Z not homed, forcing full G28") }
             {% endif %}
-            _KlickyDebug msg="homing_override Z not homed, setting position as X=Y=Z=0"
-            SET_KINEMATIC_POSITION X=0 Y=0 Z=0
-            _KlickyDebug msg="homing_override toolhead too low, raising it by {safe_z}mm"
-            G0 Z{safe_z} F{z_drop_feedrate}
+            _KlickyDebug msg="homing_override Z not homed, setting position as X=Y=0 Z={kinematic_z}"
+            SET_KINEMATIC_POSITION X=0 Y=0 Z={kinematic_z}
+            {% if printer.toolhead.position.z < safe_z %}
+                _KlickyDebug msg="homing_override toolhead too low, raising it to {safe_z}mm"
+                {% if verbose %}
+                    { action_respond_info("moving to a safe Z distance") }
+                {% endif %}
+                G0 Z{safe_z} F{z_drop_feedrate}
+            {% endif %}
             {% set home_x, home_y, home_z = True, True, True %}
         {% endif %}
     {% endif %}
@@ -649,19 +659,19 @@ gcode:
                 { action_respond_info("Homing Y") }
             {% endif %}
             {% if printer["gcode_macro _HOME_Y"] is defined %}
-                _KlickyDebug ("homing_override calling _HOME_Y external script to handle the Y homing")
+                _KlickyDebug msg="homing_override calling _HOME_Y external script to handle the Y homing"
                 _HOME_Y
             {% else %}
                 _KlickyDebug msg="homing_override Homing Y G28 Y0"
                 G28 Y0
                 # does it need to back away from the home position
-                {% if home_backoff != 0 %}
+                {% if home_backoff_y != 0 %}
                     {% if (printer.configfile.settings.stepper_y.position_endstop > (printer.configfile.settings.stepper_y.position_min|default(0) + printer.configfile.settings.stepper_y.position_max)/2) %}
-                        _KlickyDebug msg="homing_override backing off Y endstop, G0 Y{printer.configfile.settings.stepper_y.position_endstop-home_backoff|int} F{travel_feedrate}"
-                        G0 Y{printer.configfile.settings.stepper_y.position_endstop - home_backoff|int} F{travel_feedrate}
+                        _KlickyDebug msg="homing_override backing off Y endstop, G0 Y{printer.configfile.settings.stepper_y.position_endstop-home_backoff_y|int} F{travel_feedrate}"
+                        G0 Y{printer.configfile.settings.stepper_y.position_endstop - home_backoff_y|int} F{travel_feedrate}
                     {% else %}
-                        _KlickyDebug msg="homing_override backing off Y endstop, G0 Y{printer.configfile.settings.stepper_y.position_endstop + home_backoff|int} F{travel_feedrate}"
-                        G0 Y{printer.configfile.settings.stepper_y.position_endstop + home_backoff|int} F{travel_feedrate}
+                        _KlickyDebug msg="homing_override backing off Y endstop, G0 Y{printer.configfile.settings.stepper_y.position_endstop + home_backoff_y|int} F{travel_feedrate}"
+                        G0 Y{printer.configfile.settings.stepper_y.position_endstop + home_backoff_y|int} F{travel_feedrate}
                     {%endif %}
                 {%endif %}
             {% endif %}
@@ -676,19 +686,19 @@ gcode:
             { action_respond_info("Homing X") }
         {% endif %}
         {% if printer["gcode_macro _HOME_X"] is defined %}
-            _KlickyDebug ("homing_override calling _HOME_Y external script to handle the Y homing")
+            _KlickyDebug msg="homing_override calling _HOME_X external script to handle the X homing"
             _HOME_X
         {% else %}
-            _KlickyDebug msg="homing_override Homing X G28 X0"
+            _KlickyDebug msg="homing_override Homing X, G28 X0"
             G28 X0
             # does it need to back away from the home position
-            {% if home_backoff != 0 %}
+            {% if home_backoff_x != 0 %}
                 {% if (printer.configfile.settings.stepper_x.position_endstop > (printer.configfile.settings.stepper_x.position_min|default(0) + printer.configfile.settings.stepper_x.position_max)/2) %}
-                    _KlickyDebug msg="homing_override backing off X endstop, G0 X{printer.configfile.settings.stepper_x.position_endstop - home_backoff|int} F{travel_feedrate}"
-                    G0 X{printer.configfile.settings.stepper_x.position_endstop - home_backoff|int} F{travel_feedrate}
+                    _KlickyDebug msg="homing_override backing off X endstop, G0 X{printer.configfile.settings.stepper_x.position_endstop - home_backoff_x|int} F{travel_feedrate}"
+                    G0 X{printer.configfile.settings.stepper_x.position_endstop - home_backoff_x|int} F{travel_feedrate}
                 {% else %}
-                    _KlickyDebug msg="homing_override backing off X endstop, G0 X{printer.configfile.settings.stepper_x.position_endstop + home_backoff|int} F{travel_feedrate}"
-                    G0 Y{printer.configfile.settings.stepper_x.position_endstop + home_backoff|int} F{travel_feedrate}
+                    _KlickyDebug msg="homing_override backing off X endstop, G0 X{printer.configfile.settings.stepper_x.position_endstop + home_backoff_x|int} F{travel_feedrate}"
+                    G0 X{printer.configfile.settings.stepper_x.position_endstop + home_backoff_x|int} F{travel_feedrate}
                 {%endif %}
             {%endif %}
         {% endif %}
@@ -700,18 +710,18 @@ gcode:
             { action_respond_info("Homing Y") }
         {% endif %}
         {% if printer["gcode_macro _HOME_Y"] is defined %}
-            _KlickyDebug ("homing_override calling _HOME_Y external script to handle the Y homing")
+            _KlickyDebug msg="homing_override calling _HOME_Y external script to handle the Y homing"
             _HOME_Y
         {% else %}
-            _KlickyDebug msg="homing_override Homing Y G28 Y0"
+            _KlickyDebug msg="homing_override Homing Y, G28 Y0"
             G28 Y0
-            {% if home_backoff != 0 %}
+            {% if home_backoff_y != 0 %}
                 {% if (printer.configfile.settings.stepper_y.position_endstop > (printer.configfile.settings.stepper_y.position_min|default(0) + printer.configfile.settings.stepper_y.position_max)/2) %}
-                    _KlickyDebug msg="homing_override backing off Y endstop, G0 Y{printer.configfile.settings.stepper_y.position_endstop - home_backoff|int} F{travel_feedrate}"
-                    G0 Y{printer.configfile.settings.stepper_y.position_endstop - home_backoff|int} F{travel_feedrate}
+                    _KlickyDebug msg="homing_override backing off Y endstop, G0 Y{printer.configfile.settings.stepper_y.position_endstop - home_backoff_y|int} F{travel_feedrate}"
+                    G0 Y{printer.configfile.settings.stepper_y.position_endstop - home_backoff_y|int} F{travel_feedrate}
                 {% else %}
-                    _KlickyDebug msg="homing_override backing off Y endstop, G0 Y{printer.configfile.settings.stepper_y.position_endstop + home_backoff|int} F{travel_feedrate}"
-                    G0 Y{printer.configfile.settings.stepper_y.position_endstop + home_backoff|int} F{travel_feedrate}
+                    _KlickyDebug msg="homing_override backing off Y endstop, G0 Y{printer.configfile.settings.stepper_y.position_endstop + home_backoff_y|int} F{travel_feedrate}"
+                    G0 Y{printer.configfile.settings.stepper_y.position_endstop + home_backoff_y|int} F{travel_feedrate}
                 {%endif %}
             {%endif %}
         {% endif %}
@@ -722,7 +732,7 @@ gcode:
             { action_respond_info("Homing Z") }
         {% endif %}
 
-        # if probe is configured as endstop, attach it, else dock the probe if attached
+        # if probe is configured as endstop, attach it, else check if the probe needs to be docked if attached
         {% if printer['configfile'].config["stepper_z"]["endstop_pin"] == 'probe:z_virtual_endstop' %}
             _KlickyDebug msg="homing_override probe configured as a virtual Z endstop attaching probe"                    
             Attach_Probe
@@ -730,7 +740,7 @@ gcode:
             {% if leave_probe_attached %}
                 _Probe_Lock
             {% endif %}
-        {% else %}
+        {% elif dock_on_zhome == True %}
             Dock_Probe
         {% endif %}
 
@@ -739,6 +749,8 @@ gcode:
         # if probe is configured as endstop, dock it
         {% if printer['configfile'].config["stepper_z"]["endstop_pin"] == 'probe:z_virtual_endstop' %}
             _KlickyDebug msg="homing_override probe no longer required, docking probe"                    
+            Dock_Probe
+        {% elif dock_on_zhome == False %}
             Dock_Probe
         {% endif %}
     {% endif %}
@@ -785,7 +797,7 @@ gcode:
     {% if not 'xy' in printer.toolhead.homed_axes %}
         { action_raise_error("Must Home X and Y Axis First!") }
     {% else %}
-        _KlickyDebug msg="_Home_Z Axis homed"
+        _KlickyDebug msg="_Home_Z XY Axis homed"
         {% if not 'z' in printer.toolhead.homed_axes %}
             {% if verbose %}
                 { action_respond_info("Resetting Z position to zero") }
@@ -920,3 +932,6 @@ gcode:
         _KlickyDebug msg="_klicky_status_calibrating_z activating the LED STATUS_CALIBRATING_Z"
         STATUS_CALIBRATING_Z
     {% endif %}
+
+
+
