--- a/klicky-variables.cfg
+++ b/klicky-variables.cfg
@@ -2,12 +2,12 @@
 # I have tweaked it a lot.
 # They are based on the great Annex magprobe dockable probe macros "#Originally developed by Mental,
 # modified for better use on K-series printers by RyanG and Trails", kudos to them.
-# That macro as since evolved into a klipper plugin that currently is pending inclusion in klipper, 
+# That macro as since evolved into a klipper plugin that currently is pending inclusion in klipper,
 # more information here, https://github.com/Annex-Engineering/Quickdraw_Probe/tree/main/Klipper_Macros
 # User richardjm revised the macro variables and added some functions, thanks a lot
 # by standing on the shoulders of giants, lets see if we can see further
 #
-# the current home for this version is https://github.com/jlas1/Klicky-Probe 
+# the current home for this version is https://github.com/jlas1/Klicky-Probe
 # the 1000 values below is to give an error instead of doing something wrong, hopefully, this won't be used is a printer larger than 1 meter
 
 [gcode_macro _User_Variables]
@@ -43,7 +43,7 @@ variable_enable_dock_servo:  False    # Set to true if your klicky dock is servo
 variable_servo_name:        'NAME'    # The name of the dock servo defined in printer.cfg under [servo]
 variable_servo_deploy:          10    # This EXAMPLE is the value used to deploy the servo fully
 variable_servo_retract:         11    # This EXAMPLE is the value used to retract the servo fully (initial_angle in [servo] config)
-variable_servo_delay:         1000    # This is a delay to wait the servo to reach the requested position, be carefull with high values
+variable_servo_delay:          250    # This is a delay to wait the servo to reach the requested position, be carefull with high values
 #Dock move, final toolhead movement to release the probe on the dock
 #it's a relative move
 Variable_dockmove_x:            40
@@ -74,12 +74,16 @@ Variable_attachmove2_x:          0    # intermediate toolhead movement to attach
 Variable_attachmove2_y:          0    # the probe on the dock
 Variable_attachmove2_z:          0    # (can be negative)
 
-variable_home_backoff:          10    # how many mm to move away from the endstop after homing
+variable_home_backoff_x:        10    # how many mm to move away from the X endstop after homing X
+                                      # this is useful for the voron v0 to enable the toolhead to move out of the way to allow an unstricted Y homing
+variable_home_backoff_y:        10    # how many mm to move away from the Y endstop after homing Y
 
-variable_override_homing:        ''   # configures what axis to home first
-                                      #  '' = default klicky behavior (tries to avoid the hitting the dock
-                                      # 'X' = forces X to home first 
-                                      # 'Y' = forces Y to home first  
+variable_override_homing:       ''    # configures what axis to home first
+                                      #  '' = default klicky behavior (tries to avoid the hitting the dock)
+                                      # 'X' = forces X to home first
+                                      # 'Y' = forces Y to home first
+                                      
+variable_dock_on_zhome:       True    # docks the probe on Z Homing if not necessary (avoids hitting the bed on some printers
 
 # Do not modify below
 gcode:
