--- a/printer.cfg
+++ b/printer.cfg
@@ -45,7 +45,7 @@ step_pin: PE11
 dir_pin: !PE10
 enable_pin: !PE9
 rotation_distance: 40
-microsteps: 128
+microsteps: 64
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
 endstop_pin: ^PB14
 position_min: 0
@@ -74,7 +74,7 @@ step_pin: PD8
 dir_pin: !PB12
 enable_pin: !PD9
 rotation_distance: 40
-microsteps: 128
+microsteps: 64
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
 endstop_pin: ^PB13
 position_min: 0
@@ -108,7 +108,7 @@ dir_pin: !PD13
 enable_pin: !PD15
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 128
+microsteps: 64
 ##  In Z- Position
 endstop_pin: ^PA0
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
@@ -142,7 +142,7 @@ dir_pin: PC13
 enable_pin: !PE5
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 128
+microsteps: 64
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z1]
@@ -160,7 +160,7 @@ dir_pin: !PE4
 enable_pin: !PE3
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 128
+microsteps: 64
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
@@ -178,7 +178,7 @@ dir_pin: PC4
 enable_pin: !PE8
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 128
+microsteps: 64
 
 [tmc2209 stepper_z3]
 uart_pin: PA15
@@ -201,12 +201,14 @@ enable_pin: !PD4
 ##	If you ask for 100mm of filament, but in reality it is 98mm:
 ##	rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
 ##  22.6789511 is a good starting point
-rotation_distance: 21.545003545	#Bondtech 5mm Drive Gears
+#rotation_distance: 21.545003545	#Bondtech 5mm Drive Gears
+rotation_distance: 33.905745751720715    #Fysetc 12mm Drive Gears
 ##	Update Gear Ratio depending on your Extruder Type
 ##	Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##	Use 80:20 for M4, M3.1
-gear_ratio: 50:17				#BMG Gear Ratio
-microsteps: 128
+#gear_ratio: 50:17				#BMG Gear Ratio
+gear_ratio: 7.5:1				#BMG 12mm Gear Ratio
+microsteps: 64
 full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
@@ -219,13 +221,15 @@ min_temp: 10
 max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
+max_extrude_only_distance: 150
 #control = pid
 #pid_kp = 26.213
 #pid_ki = 1.304
 #pid_kd = 131.721
 ##	Try to keep pressure_advance below 1.0
 #pressure_advance: 0.05
-pressure_advance: 0.04
+#pressure_advance: 0.04 #Afterburner
+pressure_advance: 0.04 #Galileo
 ##	Default is 0.040, leave stock
 pressure_advance_smooth_time: 0.040
 
@@ -234,7 +238,8 @@ pressure_advance_smooth_time: 0.040
 [tmc2209 extruder]
 uart_pin: PD7
 interpolate: False
-run_current: 0.5
+#run_current: 0.5
+run_current: 0.35
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
